--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -6,7 +6,23 @@
 </div>
 
 
-<div class="work portfolio-1">
+<div class="work">
+  <div class="laptop"></div>
+  <div class="work-carousel">
+    <div>your content</div>
+    <div>your content</div>
+    <div>your content</div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.work-carousel').slick({
+      infinite: true
+    });
+  });
+</script>
+<!-- <div class="work portfolio-1">
   <div class="laptop">
     <div class="portfolio" style="background-image: url('http://images.karenling.net/aa/portfolio/portfolio_image_1.jpg')">
       <div class='description'>
@@ -60,9 +76,9 @@
     </div>
   </div>
 </div>
+ -->
 
-
-<div class="down-arrow start-position">
+<!-- <div class="down-arrow start-position">
   <div class="left"></div>
   <div class="right"></div>
-</div>
+</div> -->
