--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -9,9 +9,9 @@
 <div class="work">
   <div class="laptop"></div>
   <div class="work-carousel">
-    <div>your content</div>
-    <div>your content</div>
-    <div>your content</div>
+    <div class="portfolio portfolio-1">your content</div>
+    <div class="portfolio portfolio-2">your content</div>
+    <div class="portfolio portfolio-3">your content</div>
   </div>
 </div>
 
