--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,6 +84,7 @@ hr.divider {
     }
 
     .portfolio {
+      position: relative;
       background-size: 100%;
       height: 100%;
       background-repeat: no-repeat;
@@ -95,6 +96,11 @@ hr.divider {
       }
       &.portfolio-3 {
         background-image: url('http://images.karenling.net/aa/portfolio/portfolio_image_3.jpg');
+      }
+
+      video {
+        width: 100%;
+        margin: auto auto;
       }
     }
 
