--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,7 +122,7 @@ hr.divider {
     // }
 
     .description {
-      opacity: 0;
+      // opacity: 0;
       position: absolute;
       top: 0;
       left: 0;
@@ -161,6 +161,7 @@ hr.divider {
           img {
             height: 25px;
             margin-right: 10px;
+            display: inline-block;
           }
         }
         .body {
