Add toggle hide/show for description.

--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -14,6 +14,7 @@
     <div class="portfolio portfolio-1">
       <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mov" type="video/mov"></video>
 
+      <div class="more-info">Info</div>
       <div class='description'>
         <div class='content'>
           <div class='title'>
@@ -34,6 +35,7 @@
     <div class="portfolio portfolio-2">
       <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mov" type="video/mov"></video>
 
+      <div class="more-info">Info</div>
       <div class='description'>
         <div class='content'>
           <div class='title'><a href='http://twinkieset.com'>Twinkieset <i class='fa fa-external-link'></i></a></div>
@@ -51,6 +53,7 @@
     <div class="portfolio portfolio-3">
       <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mov" type="video/mov"></video>
 
+      <div class="more-info">Info</div>
       <div class='description'>
         <div class='content'>
           <div class='title'><a href='http://github.com/karenling/chess'>Ruby Chess <i class='fa fa-external-link'></i></a></div>
@@ -72,18 +75,28 @@
       infinite: true,
     });
 
-
     function playCurrentvideo () {
       video = $('.slick-current').find('video').get(0)
       video.play();
     }
 
-    // playCurrentvideo();
+    function addInfoListener () {
+      info = $('.slick-current').find('.more-info')
+      info.on('click', function () {
+        $(this).next().toggleClass('make-opaque')
+      })
+    }
 
+    // playCurrentvideo();
+    addInfoListener();
 
     $('.work-carousel').on('afterChange', function () {
       // playCurrentvideo();
+      addInfoListener();
     })
+
+
+
 
 
   });
