--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -121,8 +121,14 @@ hr.divider {
     //   }
     // }
 
+    .more-info {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 1;
+    }
     .description {
-      // opacity: 0;
+      opacity: 0;
       position: absolute;
       top: 0;
       left: 0;
