--- a/app/views/static_pages/_contact.html.erb
+++ b/app/views/static_pages/_contact.html.erb
@@ -1,4 +1,6 @@
-<div class="contact">
+<div class="contact" style="display: none;">
+
+  <div class="close-contact">&#10005;</div>
   <div class="container">
     <div class="title">Get In Touch</div>
     <hr class="divider"/>
