--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -3,7 +3,7 @@
 
   <div class="work-carousel">
     <div class="portfolio portfolio-1">
-      <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mov" type="video/mov"></video>
+      <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -27,7 +27,7 @@
 
     </div>
     <div class="portfolio portfolio-2">
-      <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-2.mov" type="video/mov"></video>
+      <video autoplay loop src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
