--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -4,7 +4,7 @@
 
   <div class="work-carousel">
     <div class="portfolio portfolio-1">
-      <video autoplay loop preload="auto" src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mp4" type="video/mov"></video>
+      <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -28,7 +28,7 @@
 
     </div>
     <div class="portfolio portfolio-2">
-      <video autoplay loop preload="auto" src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
+      <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -49,7 +49,7 @@
 
     </div>
     <div class="portfolio portfolio-3">
-      <video autoplay loop preload="auto" src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-3.mp4" type="video/mov"></video>
+      <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-3.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -69,6 +69,8 @@
     </div>
   </div>
 </div>
+
+<div class="loading"><div class="loader">Loading...</div></div>
 
 <script type="text/javascript">
   $(document).ready(function(){
