Give different color for twinkieset info.

--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -30,7 +30,7 @@
     <div class="portfolio portfolio-2">
       <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
 
-      <div class="more-info">
+      <div class="more-info" style="color: #999;">
         <i class="info">i</i>
         <i class="close-description hide-button">&#10005;</i>
       </div>
