Move images to s3.

--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -4,7 +4,7 @@
 
   <div class="work-carousel">
     <div class="portfolio portfolio-1">
-      <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-1.mp4" type="video/mov"></video>
+      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-1.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -17,7 +17,7 @@
           </div>
 
           <div class='icons'>
-            <img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/javascript.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/html5.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/cs6.png'>
+            <img src='http://images.karenling.net/aa/portfolio/code_icons/javascript.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/html5.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/cs6.png'>
           </div>
 
           <div class='body'>
@@ -28,7 +28,7 @@
 
     </div>
     <div class="portfolio portfolio-2">
-      <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
+      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
 
       <div class="more-info" style="color: #999;">
         <i class="info">i</i>
@@ -39,7 +39,7 @@
           <div class='title'><a href='http://twinkieset.com'>Twinkieset <i class='fa fa-external-link'></i></a></div>
 
           <div class='icons'>
-            <img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/rails.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/ruby.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/javascript.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/backbonejs.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/html5.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/css3.png'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/cs6.png'>
+            <img src='http://images.karenling.net/aa/portfolio/code_icons/rails.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/ruby.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/javascript.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/backbonejs.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/html5.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/css3.png'><img src='http://images.karenling.net/aa/portfolio/code_icons/cs6.png'>
           </div>
 
           <div class='body'>Twinkieset is a client photo gallery for modern photographers, inspired by <a href='http://pixieset.com'>Pixieset</a>, built on Rails and Backbone. Photographers can upload photos and create beautifully designed galleries for their clients. &nbsp;<a href='http://github.com/karenling/Twinkieset'><i class='fa fa-github'></i></a>
@@ -49,7 +49,7 @@
 
     </div>
     <div class="portfolio portfolio-3">
-      <video autoplay loop  src="https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/video-portfolio-3.mp4" type="video/mov"></video>
+      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-3.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -59,7 +59,7 @@
         <div class='content'>
           <div class='title'><a href='http://github.com/karenling/chess'>Ruby Chess <i class='fa fa-external-link'></i></a></div>
 
-          <div class='icons'><img src='https://dl.dropboxusercontent.com/u/2330299/capstone/portfolio/code_icons/ruby.png'></div>
+          <div class='icons'><img src='http://images.karenling.net/aa/portfolio/code_icons/ruby.png'></div>
 
           <div class='body'>Terminal chess implementation, written in Ruby. &nbsp;<a href='http://github.com/karenling/chess'><i class='fa fa-github'></i></a>
           </div>
