--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -4,7 +4,7 @@
 
   <div class="work-carousel">
     <div class="portfolio portfolio-1">
-      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-1.mp4" type="video/mov"></video>
+      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-1.mp4" type="video/mov" style="margin-top: -5px;"></video>
 
       <div class="more-info">
         <i class="info">i</i>
