Show pointer on hover of info.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -112,6 +112,7 @@ hr.divider {
       color: #fff;
       opacity: 0.5;
       font-size: 30px;
+      cursor: pointer;
       .info {
         font-family: serif;
         padding-right: 5px;
