--- a/app/views/static_pages/_work.html.erb
+++ b/app/views/static_pages/_work.html.erb
@@ -4,7 +4,7 @@
 
   <div class="work-carousel">
     <div class="portfolio portfolio-1">
-      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-1.mp4" type="video/mov" style="margin-top: -1.5%;"></video>
+      <video loop src="http://images.karenling.net/aa/portfolio/video-portfolio-1.mp4" type="video/mov" style="margin-top: -1.5%;"></video>
 
       <div class="more-info">
         <i class="info">i</i>
@@ -28,7 +28,7 @@
 
     </div>
     <div class="portfolio portfolio-2">
-      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
+      <video loop src="http://images.karenling.net/aa/portfolio/video-portfolio-2.mp4" type="video/mov"></video>
 
       <div class="more-info" style="color: #999;">
         <i class="info">i</i>
@@ -49,7 +49,7 @@
 
     </div>
     <div class="portfolio portfolio-3">
-      <video autoplay loop  src="http://images.karenling.net/aa/portfolio/video-portfolio-3.mp4" type="video/mov"></video>
+      <video loop src="http://images.karenling.net/aa/portfolio/video-portfolio-3.mp4" type="video/mov"></video>
 
       <div class="more-info">
         <i class="info">i</i>
