Change laptop image to gif.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,7 +68,7 @@ hr.divider {
 
     .laptop {
       width: Calc(100% - 100px);
-      background-image: url('http://images.karenling.net/aa/portfolio/mac_laptop.png');
+      background-image: url('http://images.karenling.net/aa/portfolio/mac_laptop.gif');
       background-size: 100%;
       background-repeat: no-repeat;
       position: absolute;
