--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,6 +1,8 @@
-<%= render 'sidebar' %>
+<div class="flex">
+  <%= render 'sidebar' %>
 
-<div class="main">
-  <%= render 'work' %>
-  <%= render 'contact' %>
+  <div class="main">
+    <%= render 'work' %>
+    <%= render 'contact' %>
+  </div>
 </div>
