--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -283,7 +283,7 @@ aside {
     width: 160px;
     height: 160px;
     border-radius: 80px;
-    background-image: url('http://images.karenling.net/aa/portfolio/profile_image.jpg');
+    background-image: url('https://dl.dropboxusercontent.com/u/2330299/blog/design/profile-1.jpg');
     background-size: 100%;
     margin: auto auto;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
